refactor : 카탈로그 컬렉션의 권위 상태를 정리
Ref: #371